# findata

./: LICENSE  pyproject.toml
findata/: __init__.py
