[tool.poetry]
name = "findata"
version = "0.1.1"
description = ""
authors = ["Santo K Thomas <santokalayil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
pyarrow = "^15.0.0"
matplotlib = "^3.8.3"
pydantic = "^2.6.1"
seaborn = "^0.13.2"
fastapi = "^0.109.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
